--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <start-class>com.vinapex.licensingservice.ApexLicensingServiceApplication</start-class>
+        <start-class>com.vinapex.EurekaServerApplication</start-class>
         <docker.image.name>vinodht/vinapex-licensing-service</docker.image.name>
         <docker.image.tag>chapter3</docker.image.tag>
     </properties>
